# compile-time-player

./: .gitignore  MP3Hooks.hs  README.md  Setup.hs  compile-time-player.cabal  cyt.cabal
src/: Assist.hs  CYT.hs  CompileAssistant.hs  CompileTimeQ.hs
src/CYT/: Core.hs
src/CompileTimeQ/: Core.hs
