name:                compile-time-player
version:             0.2.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/cyt#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CompileTimeQ, CompileAssistant
  other-modules:       CompileTimeQ.Core
  build-depends:       base >= 4.7 && < 5, directory, filepath, process, temporary, template-haskell
  default-language:    Haskell2010
