name:                cyt
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/MichaeGon/cyt#readme
license:             BSD3
license-file:        LICENSE
author:              MichaeGon
maintainer:          MichaeGon
copyright:           2016 MichaeGon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CYT
  other-modules:       CYT.Core
  build-depends:       base >= 4.7 && < 5, process, template-haskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaeGon/cyt
